--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -17,6 +17,7 @@ set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1100::57d3;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
+set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 set_real_ip_from 2001:620:20d0::23;
@@ -178,6 +179,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -357,7 +359,6 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -410,7 +411,6 @@ set_real_ip_from 2a04:52c0:101:46a::;
 set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
-set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -694,7 +694,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
