Update lists at 20250530-0601

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -109,6 +109,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 119.28.139.55;
@@ -840,6 +841,7 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
