--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -109,6 +109,7 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.35.245.150;
+deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
 deny 119.28.139.55;
@@ -797,6 +798,7 @@ deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:7826::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -952,6 +954,7 @@ deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.151.8.8;
 deny 23.155.8.104;
+deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -1026,6 +1029,7 @@ deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
