--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -19,7 +19,6 @@ set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
-set_real_ip_from 104.219.236.16;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
@@ -675,6 +674,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -1037,6 +1037,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1293,7 +1294,6 @@ set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1576,7 +1576,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1615,54 +1614,6 @@ set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
-set_real_ip_from 2a10:1fc0:10::19eb:717b;
-set_real_ip_from 2a10:1fc0:10::28fc:90d4;
-set_real_ip_from 2a10:1fc0:10::2a17:5b54;
-set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
-set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
-set_real_ip_from 2a10:1fc0:10::3903:457;
-set_real_ip_from 2a10:1fc0:10::3919:de17;
-set_real_ip_from 2a10:1fc0:10::3a1:5e9f;
-set_real_ip_from 2a10:1fc0:10::3dc5:e694;
-set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
-set_real_ip_from 2a10:1fc0:10::3ec1:2b1e;
-set_real_ip_from 2a10:1fc0:10::40d8:83c;
-set_real_ip_from 2a10:1fc0:10::42d2:f78b;
-set_real_ip_from 2a10:1fc0:10::5138:4dfa;
-set_real_ip_from 2a10:1fc0:10::5719:261d;
-set_real_ip_from 2a10:1fc0:10::61d9:7617;
-set_real_ip_from 2a10:1fc0:10::61e2:c84d;
-set_real_ip_from 2a10:1fc0:10::627f:3c31;
-set_real_ip_from 2a10:1fc0:10::694a:c359;
-set_real_ip_from 2a10:1fc0:10::6b4c:30fc;
-set_real_ip_from 2a10:1fc0:10::6c2e:469a;
-set_real_ip_from 2a10:1fc0:10::6d92:d6ab;
-set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
-set_real_ip_from 2a10:1fc0:10::792f:38b4;
-set_real_ip_from 2a10:1fc0:10::895d:abf9;
-set_real_ip_from 2a10:1fc0:10::8a03:d023;
-set_real_ip_from 2a10:1fc0:10::8b78:d42e;
-set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
-set_real_ip_from 2a10:1fc0:10::9a73:d4f2;
-set_real_ip_from 2a10:1fc0:10::9d80:c9f7;
-set_real_ip_from 2a10:1fc0:10::9e08:e765;
-set_real_ip_from 2a10:1fc0:10::a3a5:49da;
-set_real_ip_from 2a10:1fc0:10::a458:8b37;
-set_real_ip_from 2a10:1fc0:10::a63c:724c;
-set_real_ip_from 2a10:1fc0:10::b571:1205;
-set_real_ip_from 2a10:1fc0:10::bf3f:d195;
-set_real_ip_from 2a10:1fc0:10::c129:61a1;
-set_real_ip_from 2a10:1fc0:10::c385:c7fa;
-set_real_ip_from 2a10:1fc0:10::c7c7:2f84;
-set_real_ip_from 2a10:1fc0:10::d5a6:a292;
-set_real_ip_from 2a10:1fc0:10::d5d0:db30;
-set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
-set_real_ip_from 2a10:1fc0:10::dbe0:6173;
-set_real_ip_from 2a10:1fc0:10::dbe9:7852;
-set_real_ip_from 2a10:1fc0:10::e4c8:9020;
-set_real_ip_from 2a10:1fc0:10::ea87:5496;
-set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
-set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:1467::;
@@ -1774,7 +1725,6 @@ set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.161;
 set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.178;
-set_real_ip_from 45.138.16.221;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
 set_real_ip_from 45.138.16.231;
@@ -1886,7 +1836,6 @@ set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
-set_real_ip_from 46.249.49.183;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
@@ -1899,7 +1848,6 @@ set_real_ip_from 51.38.225.46;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1908,7 +1856,6 @@ set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
 set_real_ip_from 5.255.118.218;
 set_real_ip_from 5.255.121.71;
-set_real_ip_from 5.255.122.82;
 set_real_ip_from 5.255.123.158;
 set_real_ip_from 5.255.123.164;
 set_real_ip_from 5.255.125.196;
@@ -1982,30 +1929,6 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
-set_real_ip_from 85.239.55.11;
-set_real_ip_from 85.239.55.110;
-set_real_ip_from 85.239.55.112;
-set_real_ip_from 85.239.55.114;
-set_real_ip_from 85.239.55.123;
-set_real_ip_from 85.239.55.132;
-set_real_ip_from 85.239.55.168;
-set_real_ip_from 85.239.55.173;
-set_real_ip_from 85.239.55.174;
-set_real_ip_from 85.239.55.184;
-set_real_ip_from 85.239.55.189;
-set_real_ip_from 85.239.55.192;
-set_real_ip_from 85.239.55.201;
-set_real_ip_from 85.239.55.228;
-set_real_ip_from 85.239.55.230;
-set_real_ip_from 85.239.55.239;
-set_real_ip_from 85.239.55.24;
-set_real_ip_from 85.239.55.249;
-set_real_ip_from 85.239.55.25;
-set_real_ip_from 85.239.55.250;
-set_real_ip_from 85.239.55.31;
-set_real_ip_from 85.239.55.37;
-set_real_ip_from 85.239.55.51;
-set_real_ip_from 85.239.55.80;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
@@ -2047,30 +1970,6 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
-set_real_ip_from 91.227.77.107;
-set_real_ip_from 91.227.77.108;
-set_real_ip_from 91.227.77.119;
-set_real_ip_from 91.227.77.125;
-set_real_ip_from 91.227.77.139;
-set_real_ip_from 91.227.77.158;
-set_real_ip_from 91.227.77.160;
-set_real_ip_from 91.227.77.181;
-set_real_ip_from 91.227.77.193;
-set_real_ip_from 91.227.77.200;
-set_real_ip_from 91.227.77.208;
-set_real_ip_from 91.227.77.209;
-set_real_ip_from 91.227.77.226;
-set_real_ip_from 91.227.77.229;
-set_real_ip_from 91.227.77.237;
-set_real_ip_from 91.227.77.25;
-set_real_ip_from 91.227.77.31;
-set_real_ip_from 91.227.77.36;
-set_real_ip_from 91.227.77.44;
-set_real_ip_from 91.227.77.48;
-set_real_ip_from 91.227.77.51;
-set_real_ip_from 91.227.77.54;
-set_real_ip_from 91.227.77.62;
-set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
@@ -2079,7 +1978,6 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.158.156;
 set_real_ip_from 93.185.165.211;
-set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
