--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -109,7 +109,6 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
 deny 119.28.139.55;
@@ -128,6 +127,7 @@ deny 135.125.239.70;
 deny 136.175.8.45;
 deny 136.244.111.163;
 deny 138.59.18.110;
+deny 138.68.144.236;
 deny 139.162.90.140;
 deny 139.99.172.11;
 deny 139.99.8.57;
@@ -534,6 +534,7 @@ deny 185.56.171.94;
 deny 185.56.83.83;
 deny 185.67.82.114;
 deny 185.82.219.109;
+deny 185.84.31.254;
 deny 188.165.200.97;
 deny 188.214.104.21;
 deny 188.239.191.25;
@@ -620,6 +621,7 @@ deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.237.221.228;
 deny 193.239.232.102;
@@ -795,7 +797,6 @@ deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:7826::b;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1273,6 +1274,7 @@ deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 deny 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+deny 2a03:6f20:531::254;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
 deny 2a03:e600:100::3;
@@ -1291,6 +1293,7 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1582,6 +1585,8 @@ deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc2:0:2c::1;
+deny 2a0e:bfc7:0:3::2d83;
+deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
@@ -1603,6 +1608,7 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:23ae:4067:bed4:a129;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
@@ -1862,6 +1868,8 @@ deny 45.90.185.119;
 deny 45.90.185.67;
 deny 45.90.185.68;
 deny 45.91.250.107;
+deny 45.9.156.100;
+deny 45.9.156.101;
 deny 45.9.168.103;
 deny 45.9.168.18;
 deny 45.9.168.192;
@@ -1890,6 +1898,7 @@ deny 51.38.225.46;
 deny 51.81.222.62;
 deny 5.181.80.107;
 deny 5.196.95.34;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
