--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -211,6 +211,7 @@ set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
+set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.175.148.236;
@@ -639,7 +640,6 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
-set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -873,6 +873,7 @@ set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
+set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
 set_real_ip_from 205.185.119.35;
@@ -1002,7 +1003,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
-set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1189,6 +1189,7 @@ set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:68::1;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
+set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:4d80::1;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1261,7 +1262,6 @@ set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1521,6 +1521,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1840,7 +1841,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1886,6 +1886,7 @@ set_real_ip_from 64.190.76.13;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
+set_real_ip_from 64.94.85.248;
 set_real_ip_from 65.87.7.22;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
@@ -2026,6 +2027,7 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.158.156;
 set_real_ip_from 93.185.165.211;
+set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
