Update lists at 20250604-1501

--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -157,7 +157,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
-set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -417,7 +416,6 @@ set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -677,7 +675,6 @@ set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc2:0:24::3456;
 set_real_ip_from 2a0e:bfc2:0:2c::1;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
-set_real_ip_from 2a0e:bfc7:0:4::6e7a;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:7803:fac5:cd0::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
@@ -759,6 +756,7 @@ set_real_ip_from 2a11:6100:0:1467::;
 set_real_ip_from 2a11:6100:0:156b::;
 set_real_ip_from 2a11:6100:0:1e6a::1;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
+set_real_ip_from 2a12:a800:11:1:124:198:131:223;
 set_real_ip_from 2a12:a800:11:1:124:198:131:253;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
