--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -83,6 +83,7 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -107,6 +108,7 @@ allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
 allow 124.198.131.136;
+allow 124.198.131.223;
 allow 124.198.131.253;
 allow 125.212.241.131;
 allow 125.253.56.119;
@@ -636,7 +638,6 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
-allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -999,7 +1000,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1260,7 +1260,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1520,7 +1519,6 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
-allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
@@ -1602,6 +1600,7 @@ allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a11:6100:0:1e6a::1;
 allow 2a12:a800:11:1:124:198:131:108;
+allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
@@ -1794,7 +1793,6 @@ allow 45.90.185.119;
 allow 45.90.185.67;
 allow 45.90.185.68;
 allow 45.91.250.107;
-allow 45.9.156.100;
 allow 45.9.156.101;
 allow 45.9.168.103;
 allow 45.9.168.18;
@@ -1825,7 +1823,6 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1890,7 +1887,6 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.75.25;
 allow 78.142.18.219;
-allow 79.100.235.29;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
