Update lists at 20250605-0601

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -599,6 +599,7 @@ allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.233.174.56;
 allow 194.26.192.77;
+allow 194.53.137.156;
 allow 194.87.55.98;
 allow 195.176.3.23;
 allow 195.176.3.24;
@@ -1125,6 +1126,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
