--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -599,6 +599,7 @@ deny 194.15.36.117;
 deny 194.163.157.49;
 deny 194.233.174.56;
 deny 194.26.192.77;
+deny 194.53.137.156;
 deny 194.87.55.98;
 deny 195.176.3.23;
 deny 195.176.3.24;
@@ -1487,6 +1488,7 @@ deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::50;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1942,6 +1944,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
