--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -599,6 +599,7 @@ allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.233.174.56;
 allow 194.26.192.77;
+allow 194.53.137.156;
 allow 194.87.55.98;
 allow 195.176.3.23;
 allow 195.176.3.24;
@@ -1487,6 +1488,7 @@ allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::50;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1942,6 +1944,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
