--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -648,6 +648,7 @@ deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::50;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
