--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -599,6 +599,7 @@ set_real_ip_from 194.15.36.117;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.233.174.56;
 set_real_ip_from 194.26.192.77;
+set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
@@ -1487,6 +1488,7 @@ set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::50;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1942,6 +1944,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
