--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -599,6 +599,7 @@ set_real_ip_from 194.15.36.117;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.233.174.56;
 set_real_ip_from 194.26.192.77;
+set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
@@ -1125,6 +1126,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
