--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,6 +101,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 119.28.139.55;
@@ -754,6 +755,7 @@ allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -863,6 +865,7 @@ allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.113.8;
+allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
@@ -880,7 +883,6 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -1251,7 +1253,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1504,10 +1505,6 @@ allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
-allow 2a0e:bfc0:0:11::796d;
-allow 2a0e:bfc0:0:14::24a8;
-allow 2a0e:bfc0:0:2::8a62;
-allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
@@ -1538,16 +1535,6 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:1fc0:10::2d91:1a2d;
-allow 2a10:1fc0:10::3903:457;
-allow 2a10:1fc0:10::42d2:f78b;
-allow 2a10:1fc0:10::694a:c359;
-allow 2a10:1fc0:10::6b4c:30fc;
-allow 2a10:1fc0:10::9e08:e765;
-allow 2a10:1fc0:10::a63c:724c;
-allow 2a10:1fc0:10::b571:1205;
-allow 2a10:1fc0:10::c385:c7fa;
-allow 2a10:1fc0:10::dbe9:7852;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
@@ -1752,11 +1739,6 @@ allow 45.9.168.103;
 allow 45.9.168.18;
 allow 45.9.168.192;
 allow 45.94.31.68;
-allow 45.95.169.104;
-allow 45.95.169.109;
-allow 45.95.169.110;
-allow 45.95.169.230;
-allow 45.95.169.252;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.23.109.25;
@@ -1776,7 +1758,6 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1833,6 +1814,7 @@ allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
+allow 72.5.43.62;
 allow 74.82.47.194;
 allow 77.246.98.159;
 allow 77.48.28.204;
@@ -1841,6 +1823,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.75.25;
 allow 78.142.18.219;
+allow 79.133.57.64;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1866,11 +1849,6 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
-allow 85.239.55.110;
-allow 85.239.55.132;
-allow 85.239.55.168;
-allow 85.239.55.25;
-allow 85.239.55.250;
 allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -1912,11 +1890,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
-allow 91.227.77.107;
-allow 91.227.77.208;
-allow 91.227.77.44;
-allow 91.227.77.54;
-allow 91.227.77.62;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
