--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -106,6 +106,7 @@ allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -413,7 +414,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -666,10 +666,6 @@ allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
-allow 2a0e:bfc0:0:11::796d;
-allow 2a0e:bfc0:0:14::24a8;
-allow 2a0e:bfc0:0:2::8a62;
-allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
@@ -700,16 +696,6 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:1fc0:10::2d91:1a2d;
-allow 2a10:1fc0:10::3903:457;
-allow 2a10:1fc0:10::42d2:f78b;
-allow 2a10:1fc0:10::694a:c359;
-allow 2a10:1fc0:10::6b4c:30fc;
-allow 2a10:1fc0:10::9e08:e765;
-allow 2a10:1fc0:10::a63c:724c;
-allow 2a10:1fc0:10::b571:1205;
-allow 2a10:1fc0:10::c385:c7fa;
-allow 2a10:1fc0:10::dbe9:7852;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
