--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -101,6 +101,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
+deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
 deny 119.28.139.55;
@@ -754,6 +755,7 @@ deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:7826::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -863,6 +865,7 @@ deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
 deny 205.185.113.8;
+deny 205.185.116.215;
 deny 205.185.116.34;
 deny 205.185.117.149;
 deny 205.185.119.35;
@@ -880,7 +883,6 @@ deny 209.141.40.68;
 deny 209.141.45.141;
 deny 209.141.45.81;
 deny 209.141.46.203;
-deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.54.203;
 deny 209.141.54.218;
@@ -1251,7 +1253,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1504,10 +1505,6 @@ deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
-deny 2a0e:bfc0:0:11::796d;
-deny 2a0e:bfc0:0:14::24a8;
-deny 2a0e:bfc0:0:2::8a62;
-deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
@@ -1538,16 +1535,6 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
-deny 2a10:1fc0:10::2d91:1a2d;
-deny 2a10:1fc0:10::3903:457;
-deny 2a10:1fc0:10::42d2:f78b;
-deny 2a10:1fc0:10::694a:c359;
-deny 2a10:1fc0:10::6b4c:30fc;
-deny 2a10:1fc0:10::9e08:e765;
-deny 2a10:1fc0:10::a63c:724c;
-deny 2a10:1fc0:10::b571:1205;
-deny 2a10:1fc0:10::c385:c7fa;
-deny 2a10:1fc0:10::dbe9:7852;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:1467::;
@@ -1752,11 +1739,6 @@ deny 45.9.168.103;
 deny 45.9.168.18;
 deny 45.9.168.192;
 deny 45.94.31.68;
-deny 45.95.169.104;
-deny 45.95.169.109;
-deny 45.95.169.110;
-deny 45.95.169.230;
-deny 45.95.169.252;
 deny 46.165.243.36;
 deny 46.182.21.248;
 deny 46.23.109.25;
@@ -1776,7 +1758,6 @@ deny 5.181.80.107;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1833,6 +1814,7 @@ deny 71.19.144.106;
 deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
+deny 72.5.43.62;
 deny 74.82.47.194;
 deny 77.246.98.159;
 deny 77.48.28.204;
@@ -1841,6 +1823,7 @@ deny 77.48.28.239;
 deny 77.81.247.72;
 deny 77.91.75.25;
 deny 78.142.18.219;
+deny 79.133.57.64;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
@@ -1866,11 +1849,6 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
-deny 85.239.55.110;
-deny 85.239.55.132;
-deny 85.239.55.168;
-deny 85.239.55.25;
-deny 85.239.55.250;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1912,11 +1890,6 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
-deny 91.227.77.107;
-deny 91.227.77.208;
-deny 91.227.77.44;
-deny 91.227.77.54;
-deny 91.227.77.62;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
