--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -185,6 +186,7 @@ allow 172.234.228.174;
 allow 172.234.245.150;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 172.81.134.228;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
@@ -259,6 +261,7 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
+allow 185.132.53.213;
 allow 185.132.53.6;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -883,6 +886,7 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -1015,6 +1019,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1504,6 +1509,10 @@ allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
+allow 2a0e:bfc0:0:11::796d;
+allow 2a0e:bfc0:0:14::24a8;
+allow 2a0e:bfc0:0:2::8a62;
+allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
@@ -1739,6 +1748,11 @@ allow 45.9.168.103;
 allow 45.9.168.18;
 allow 45.9.168.192;
 allow 45.94.31.68;
+allow 45.95.169.104;
+allow 45.95.169.109;
+allow 45.95.169.110;
+allow 45.95.169.230;
+allow 45.95.169.252;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.23.109.25;
