Update lists at 20250608-0601

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -67,7 +67,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -474,6 +473,7 @@ allow 185.246.189.140;
 allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
+allow 185.247.184.33;
 allow 185.247.226.175;
 allow 185.247.226.95;
 allow 185.252.232.218;
@@ -1020,7 +1020,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1269,6 +1268,7 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b87:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
+allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
@@ -1860,6 +1860,7 @@ allow 5.79.66.19;
 allow 5.8.18.99;
 allow 62.133.45.2;
 allow 62.171.137.169;
+allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.76.10;
 allow 64.190.76.11;
@@ -1948,6 +1949,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
