--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -67,7 +67,6 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
-set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -474,6 +473,7 @@ set_real_ip_from 185.246.189.140;
 set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
+set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.247.226.175;
 set_real_ip_from 185.247.226.95;
 set_real_ip_from 185.252.232.218;
@@ -1020,7 +1020,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1269,6 +1268,7 @@ set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:9b87:500::58;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
+set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
@@ -1860,6 +1860,7 @@ set_real_ip_from 5.79.66.19;
 set_real_ip_from 5.8.18.99;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
+set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.76.10;
 set_real_ip_from 64.190.76.11;
@@ -1948,6 +1949,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
