--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -162,17 +163,6 @@ allow 161.129.68.162;
 allow 161.97.156.152;
 allow 162.210.173.17;
 allow 162.216.18.62;
-allow 162.247.72.192;
-allow 162.247.72.199;
-allow 162.247.74.200;
-allow 162.247.74.201;
-allow 162.247.74.202;
-allow 162.247.74.204;
-allow 162.247.74.206;
-allow 162.247.74.213;
-allow 162.247.74.216;
-allow 162.247.74.27;
-allow 162.247.74.7;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -453,12 +443,6 @@ allow 185.220.101.96;
 allow 185.220.101.97;
 allow 185.220.101.98;
 allow 185.220.101.99;
-allow 185.220.103.4;
-allow 185.220.103.5;
-allow 185.220.103.6;
-allow 185.220.103.7;
-allow 185.220.103.8;
-allow 185.220.103.9;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
@@ -483,14 +467,12 @@ allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
 allow 185.246.189.140;
-allow 185.246.189.147;
 allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
-allow 185.28.47.4;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.39.207.83;
@@ -599,7 +581,6 @@ allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.237.221.228;
@@ -1009,7 +990,6 @@ allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
-allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
@@ -1037,6 +1017,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1536,6 +1517,7 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1565,7 +1547,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b190:21e6:40ba:73e1;
@@ -1793,8 +1774,6 @@ allow 46.234.47.105;
 allow 46.250.243.29;
 allow 46.38.243.210;
 allow 50.7.40.39;
-allow 5.101.82.67;
-allow 5.101.84.151;
 allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.59.15;
@@ -1886,6 +1865,7 @@ allow 8.211.1.212;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.29.128.140;
 allow 82.29.153.76;
 allow 83.147.17.190;
 allow 83.217.9.73;
@@ -1896,7 +1876,6 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
-allow 84.38.130.33;
 allow 84.38.130.47;
 allow 85.239.41.130;
 allow 85.90.196.47;
@@ -1913,6 +1892,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1948,6 +1928,7 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
